--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,28 @@
   <version>1.0.0-SNAPSHOT</version>
 
   <name>statemachine</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+
+  <url>https://github.com/HonoluluHenk/statemachine</url>
+
+  <ciManagement>
+    <system>jitpack</system>
+    <url>https://jitpack.io</url>
+  </ciManagement>
+
+  <developers>
+    <developer>
+      <id>HonoluluHenk</id>
+      <name>Christoph Linder</name>
+      <url>https://github.com/HonoluluHenk</url>
+    </developer>
+  </developers>
+
+  <licenses>
+    <license>
+      <name>LGPL-3.0</name>
+      <url>https://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
+    </license>
+  </licenses>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
