--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.HonoluluHenk</groupId>
     <artifactId>statemachine</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
 
     <name>statemachine</name>
     <packaging>jar</packaging>
